--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
     <img
       src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
   </div>
-  <div class="input-container">
+  <div class="input-container" [ngClass]="{'input-container--shadow': inputHasFocus}">
     <span class="search-icon">
       <svg>
         <path
@@ -28,7 +28,7 @@
         </path>
       </svg>
     </span>
-    <input />
+    <input (focus)="changeInputHasFocus(true)" (blur)="changeInputHasFocus(false)" />
     <span class="clear-icon">
       <svg>
         <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
